syntax = "proto3";
option go_package = "rail-booking/protogen/user";


// User model contains user information
message User {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}